--- a/NewRingTones/app/build.gradle
+++ b/NewRingTones/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation project(path: ':googleadviewsdk')
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.2.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     /** Glide  **/
     implementation 'com.github.bumptech.glide:glide:4.9.0'
