--- a/NewRingTones/app/src/main/AndroidManifest.xml
+++ b/NewRingTones/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.REORDER_TASKS" />
 
     <application
-        android:name=".base.MyApplication"
+        android:name=".base.baseutil.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,10 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".search.view.SearchActivity"></activity>
+        <activity android:name=".search.view.SearchActivity"
+            android:configChanges="orientation|keyboardHidden"  />
+
 
         <service
-            android:name=".base.BasePlayService"
+            android:name=".base.baseutil.BasePlayService"
             android:enabled="true"
             android:exported="true" />
 
@@ -32,6 +34,7 @@
 
         <activity
             android:name=".vview.HomeActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
