add   implementation project(':googleadviewsdk')
file--project structure-addmodule

add   implementation project(':googleadviewsdk') to app builde

--- a/NewRingTones/app/build.gradle
+++ b/NewRingTones/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     //添加这一行
     //    implementation(name:'googleadviewsdk', ext:'aar')
     implementation files('libs/encryption.jar')
+    implementation project(':googleadviewsdk')
 }
