--- a/NewRingTones/build.gradle
+++ b/NewRingTones/build.gradle
@@ -1,10 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
@@ -12,15 +11,16 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+dependencies {
+
 }
