--- a/NewRingTones/app/build.gradle
+++ b/NewRingTones/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -37,6 +38,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.2.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation('com.squareup.retrofit2:converter-gson:2.4.0') {
+        exclude group: 'com.google.code.gson'
+    }
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     /** Glide  **/
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -47,4 +51,7 @@ dependencies {
     //    implementation(name:'googleadviewsdk', ext:'aar')
     implementation files('libs/encryption.jar')
     implementation project(':googleadviewsdk')
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'me.jessyan:autosize:0.9.1'
 }
