--- a/NewRingTones/app/src/main/AndroidManifest.xml
+++ b/NewRingTones/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360"/>
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640"/>
         <service
             android:name=".base.baseutil.BasePlayService"
             android:enabled="true"
@@ -39,5 +45,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
